syntax = "proto3";
package server_message;

message RoomInfo
{
	string serverIP = 1;
	int32 serverPort = 2;
	string roomName = 3;
	int32 maxCount = 4;
	repeated PlayerInfo players = 5;
	int32 roomID = 6;
}

message PlayerInfo
{
	int32 playerID = 1;
	string clientIP = 2;
	int32 clientPort = 3;
	string playerName = 4;
}